FIX css align

--- a/core/template/dashboard/css/digiaction.css
+++ b/core/template/dashboard/css/digiaction.css
@@ -1,71 +1,54 @@
-.digiactionPanelTimer .digiFunction ,
-.digiactionDisplay{
-    float:right;
-    position:relative;
-    left:-50%;
-    text-align:left;
-    top: 40px
-}
-
-.digiactionPanelTimer span.digiFunctionTimerCancel,
-.digiactionDisplay span{
-    list-style:none;
-    position:relative;
-    left:50%;
-}
-
-.digiactionDisplay span.digiItem {
-  float:left;
-  position:relative;
-  text-align: center;
-}/* ie needs position:relative here*/
-
-
-
-.digiaction {
+  .digiaction 
+  {
     font-family: 'HelveticaNeue-UltraLight', 'HelveticaNeue-Light', 'HelveticaNeue', 'Helvetica', 'Arial', sans-serif;
     font-weight: 400;
     line-height: 1.42857;
     color: #fff;
     margin: 5px;
   }
-  
-  .digiaction ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    font-size: 0em;
+
+  .digiaction .digiActionHideDefault
+  {
+    display: none;
   }
-    
-  .digiaction ul.digiEvent {
-    margin: 5px 0;
-    height: 18px;
+
+  .digiaction .digiActionBgRed
+  {
+    background: rgb(155, 13, 13) !important;
   }
+
+  .digiaction .digiActionBgGreen
+  {
+    background: #3cbc4a !important;
+  }
+
+  .digiaction .digiActionBgYellow
+  {
+    background: #FFC107 !important; 
+  }
+
   
-  .digiaction .digiEvent li {
+  .digiaction ul.digiActionCircle li
+  {
+    background: rgb(51, 51, 51);
+    cursor: pointer;
     display: inline-block;
-    margin: 3px;
-    border: 2px solid rgba(255, 255, 255, 0.85);
-    height: 12px;
-    width: 12px;
+    padding-top: 7px;
+    margin: 5px;
+    border: 2px solid rgba(255, 255, 255, 0.45);
+    height: 47px;
+    width: 47px;
     border-radius: 75px;
     -moz-border-radius: 75px;
     -webkit-border-radius: 75px;
+    text-align: center;
+    font-size: 20px;
+    color: rgb(255, 253, 255);
   }
-  
-  .digiaction .digiEvent li.digiFilled {
-    background-color: #368EFF;
-    border: 1px solid rgba(255, 255, 255, 0.60);
-  }
-    
-  .digiaction .digiEvent li.digiFilledOK {
-    background-color: #F89406;
-  }  
-  
-  .digiaction span.digiFunction, 
-  .digiaction .digiactionPanel li {
-    background: #333;
+
+  .digiaction ul li
+  {
+    background: rgb(232, 53, 238);
     cursor: pointer;
     display: inline-block;
     padding-top: 7px;
@@ -81,82 +64,79 @@
     color: rgb(255, 253, 255);
   }
   
-  .digiaction .digiactionPanel li.digiSel {
-    background: #777;
-    border: 2px solid rgba(255, 255, 255, 0.25);
-    color: #6699ff;
-  }
-  
-  .digiaction .digiactionPanel li.digiReset {
-    background: #FFC107; 
-    border: 2px solid rgba(51, 9, 9, 0.41);
-  }
-  
-  .digiaction span.digiFunction, 
-  .digiaction .digiactionPanel li.digiFunction {
-    background: #3c8dbc;
-  }
-  
-  .digiaction .digiactionPanel li.digiFunctionValidate{
-    background: #3cbc4a !important;
-  }
-  
-  .digiaction .digiFunctionPartiel, 
-  .digiaction .digiFunctionTotal,
-  .digiaction .digiItem  {
-    width: 120px !important;
-    /* margin: 15px 5px; */
-  }
-  
-  .digiaction .digiactionPanel li.digiFunctionCancel, 
-  .digiaction .digiactionPanelTimer .digiFunctionTimerCancel {
-    background: rgb(155, 13, 13);
-  }
-  
-  .disabled{
-      pointer-events:none;
-      opacity:0.4;
-  }
-  
-  .digititle{
-    width:100%; 
-    text-align:center; 
-    position:absolute; 
-    top:0px; 
-    font-size:1em
+  .digiaction ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    font-size: 0em;
   }
 
-  .digiaction .cmd-widget .digiMessage{
+  .digiaction .digiActionKeyPressed {
+    margin: 5px 0;
+    height: 18px;
+  }
+
+  .digiaction .digiActionKeyPressed li {
+    display: inline-block;
+    margin: 3px;
+    border: 2px solid rgba(255, 255, 255, 0.85);
+    height: 12px;
+    width: 12px;
+    border-radius: 75px;
+    -moz-border-radius: 75px;
+    -webkit-border-radius: 75px;
+  }
+  
+  .digiaction .digiActionKeyPressed .digiFilled {
+    background-color: #368EFF;
+    border: 1px solid rgba(255, 255, 255, 0.60);
+  }
+
+  .digiaction .digiActionMode
+  {
+    text-align: center;
+    vertical-align: middle;
+    min-width:120px; 
+    width: auto;
+    min-height: 47px !important;
+    height: auto;
+    padding: 10px;
+    background: #3c8dbc;
+    cursor: pointer;
+    display: inline-block;
+    margin: 5px;
+    border: 2px solid rgba(255, 255, 255, 0.45);
+    border-radius: 75px;
+    -moz-border-radius: 75px;
+    -webkit-border-radius: 75px;
+    font-size: 18px;
+    color: rgb(255, 253, 255);
+    
+  }
+
+  .digiActionNoBg
+  {
+    background: transparent !important;
+    border: none !important;
+  }
+
+  .digiActionCountDownTimer{
+    color: red !important;
+    font-weight: bold !important;
+    font-size: 30px !important;
+  }
+
+  .digiaction .digiMessage{
     width:100%; 
     text-align:center; 
     position:absolute; 
     top:2px; 
-    color:orange ;
+    color:orange;
     font-size:1.3em !important;
+    padding-bottom: 10px;
   }
 
-  .digiaction .digiactionPanelKeyboard,
-  .digiaction .digiactionPanelTimer
-  {
-    display: none;
-    margin-top: 25px;
-  }
-
-  .countdowntimer {
-    width:100%; 
-    text-align:center; 
-    position:absolute; 
-    color:red; 
-    font-weight:bold; 
-    font-size:3em;
-    vertical-align: middle;
-  }
-
-  .digiaction .digiactionPanelTimer .digiFunctionTimerCancel{
-    width:120px; 
-    text-align:center; 
-    position:absolute; 
-    vertical-align: middle;
-    margin-top: 60px;
-    margin-left: -50px;
+  .digiactionMainPanel {
+    padding-top: 6px;
   }
